<resources>
    <string name="app_name">Add.Me</string>
    <string name="action_settings">Settings</string>

    <!--
    String for activity login
    -->
    <string name="action_login">Log In</string>
    <string name="action_signup">Sign Up</string>
    <string name="log_in">Log in to Add.Me</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_signup_reg">SignupRegActivity</string>


    <!--
    Strings for activity signup_reg
    -->
    <string name="sign_up_for">Sign up for Add.Me</string>
    <string name="an_easy_way">An easy way to connect to your friends</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="re_password">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="link_profiles">Link Profiles</string>
    <string name="logon_to_connect">Logon to connect your profiles to Add.Me</string>
    <string name="link_account">Link Account</string>
    <string name="finish">Finish linking accounts</string>

    <!--
    Strings for activity homepage
    -->
    <string name="welcome">Welcome, </string>
    <string name="pranay">Pranay!</string>
    <string name="view_stored_contact_cards">View stored Contact Cards</string>
    <string name="display_qr_code">Display QR Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="edit_user_info">Edit User Information</string>
    <string name="logout">Logout</string>
    <string name="title_activity_contactcard">ContactcardActivity</string>

    <!--
    Strings for menu homepage
    -->
    <string name="action_contactcard">View Contact Cards</string>
    <string name="action_displaycode">Display QR Code</string>
    <string name="action_scancode">Scan QR Code</string>
    <string name="action_editinfo">Edit Personal Info</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_displaycode">Displaycode</string>
    <string name="title_activity_scancode">ScancodeActivity</string>
    <string name="title_activity_editinfo">EditinfoActivity</string>

    <!--
    Strings for contact card
    -->
    <string name="contactcard">Stored Contact Cards</string>
    <string name="offlinecontactcard">Offline Contact Cards</string>
    <string name="onlinecontactcard">Downloaded Contact Cards</string>

    <!--
    Strings for display code
    -->
    <string name="choose_infor_share">Choose information to share</string>
    <string name="phone_number">Phone Number</string>
    <string name="Email">Email Address</string>
    <string name="Facebook">Facebook</string>
    <string name="Instagram">Instagram</string>
    <string name="Linkedin">Linkedin</string>
    <string name="offon">Off / On</string>
    <string name="genqrcode">Generate QR Code</string>
    <string name="title_activity_display_qrpage">DisplayQRPageActivity</string>

    <!--
    Strings for display qr code
    -->
    <string name="scan_code_for_infor">Scan this code for Contact!</string>
    <string name="title_activity_signup_linking">SignupLinkingActivity</string>

    <!--
    Strings for scan qr code
    -->
    <string name="scanning_qr_code">Scan QR Code to get contact!</string>


</resources>
