<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.funy.addme.ContactcardActivity">
    <item
        android:id="@+id/action_contactcard"
        android:orderInCategory="100"
        android:title="@string/action_contactcard"/>
    <item
        android:id="@+id/action_displaycode"
        android:orderInCategory="100"
        android:title="@string/action_displaycode"/>
    <item
        android:id="@+id/action_scancode"
        android:orderInCategory="100"
        android:title="@string/action_scancode"/>
    <item
        android:id="@+id/action_editinfo"
        android:orderInCategory="100"
        android:title="@string/action_editinfo"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"/>

</menu>