<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.funy.addme.HomepageActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pranay"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_height="wrap_content"
        android:text="@string/view_stored_contact_cards"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_width="fill_parent"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_qr_code"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_user_info"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/button7"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

</LinearLayout>
