<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DisplaycodeActivity"
    tools:showIn="@layout/activity_displaycode"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_infor_share"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal" />



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="center_vertical|start">

            <FrameLayout
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/handphone"></FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/phone_number"
                android:id="@+id/textView10"
                android:layout_marginLeft="5dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offon"
                android:id="@+id/switch1"
                android:checked="false"
                android:layout_marginLeft="50dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="center_vertical|start"
            android:layout_marginTop="5dp">


            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/email" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Email"
                android:id="@+id/textView11"
                android:layout_marginLeft="10dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offon"
                android:id="@+id/switch2"
                android:checked="false"
                android:layout_marginLeft="55dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="vertical"
            android:gravity="center_vertical|start"
            android:layout_marginTop="5dp">


            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/facebook" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Facebook"
                android:id="@+id/textView12"
                android:layout_marginLeft="10dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offon"
                android:id="@+id/switch3"
                android:checked="false"
                android:layout_marginLeft="90dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="center_vertical|start"
            android:layout_marginTop="5dp">


            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/instasmall" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Instagram"
                android:id="@+id/textView13"
                android:layout_marginLeft="10dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offon"
                android:id="@+id/switch4"
                android:checked="false"
                android:layout_marginLeft="85dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="vertical"
            android:gravity="center_vertical|start"
            android:layout_marginTop="5dp">


            <FrameLayout
                android:layout_width="57dp"
                android:layout_height="match_parent"
                android:background="@drawable/linkedinsmall" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Linkedin"
                android:id="@+id/textView14"
                android:layout_marginLeft="10dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offon"
                android:id="@+id/switch5"
                android:checked="false"
                android:layout_marginLeft="97dp" />
        </TableRow>

    </LinearLayout>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/genqrcode"
        android:id="@+id/button8"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

</LinearLayout>
