<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.funy.addme.SignupLinkingActivity"
    tools:showIn="@layout/activity_signup_linking"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/link_profiles"
        android:id="@+id/textView16"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/logon_to_connect"
        android:id="@+id/textView17"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:gravity="center">

        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/facebook"
            android:layout_column="0"></FrameLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_account"
            android:id="@+id/button9"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_marginLeft="30dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/instasmall"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_account"
            android:id="@+id/button10"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_marginLeft="30dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/linkedinsmall"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_account"
            android:id="@+id/button11"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_marginLeft="30dp" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:id="@+id/button12"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp" />

</LinearLayout>
